apps/gitea/overlays/nishir-tailnet/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  annotations:
    tailscale.com/proxy-class: gitea
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
