apps/gitea/overlays/nishir-tailnet/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitea
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gitea
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - port: https
          protocol: TCP
        - port: ssh
          protocol: TCP
